se centró el vide

--- a/seccion/we-are-not-zombies.html
+++ b/seccion/we-are-not-zombies.html
@@ -6,5 +6,8 @@ layout: default2
 <div class="title">
     <h4>WE ARE NOT ZOMBIES</h4>
 </div>
-
-<iframe width="560" height="315" src="//www.youtube.com/embed/N-sGnAIumII" frameborder="0" allowfullscreen></iframe>
+<br/>
+<br/>
+<div style='text-align:center;'>
+	<iframe width="560" height="315" src="//www.youtube.com/embed/N-sGnAIumII" frameborder="0" allowfullscreen></iframe>
+</div>
